test/conformance/chainsaw/generate/policy/standard/clone/nosync/pol-clone-nosync-modify-source/03-modify-source.yaml
apiVersion: v1
data:
  foo: dGhpc2hhc2JlZW5tb2RpZmllZA==
kind: Secret
metadata:
  name: regcred
  namespace: default
type: Opaque
