test/conformance/chainsaw/generate/policy/standard/clone/nosync/pol-clone-nosync-modify-source/create-cm.yaml
apiVersion: v1
kind: ConfigMap
metadata:
  name: mycm
  namespace: default
data:
  food: cheese
  day: monday
  color: red
