test/conformance/chainsaw/generate/policy/standard/clone/nosync/pol-clone-nosync-modify-source/chainsaw-step-05-assert-1-1.yaml
apiVersion: v1
data:
  foo: YmFy
kind: Secret
metadata:
  name: pol-clone-nosync-modify-source-newsecret
  namespace: default
type: Opaque
