test/conformance/chainsaw/generate/policy/standard/clone/nosync/pol-clone-nosync-modify-source/04-sleep.yaml
---
apiVersion: chainsaw.kyverno.io/v1alpha1
kind: TestStep
metadata:
  creationTimestamp: null
  name: sleep
spec:
  timeouts: {}
  try:
  - command:
      args:
      - "3"
      entrypoint: sleep
